--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.22.2",
     "appwrite": "^13.0.1",
+    "attr-accept": "^2.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
@@ -25,6 +27,7 @@
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
+    "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
